github-project/src/App.css
/* ... */
.signup-btn, .login-btn {
  background: none;
  border: none;
  color: var(--white);
  padding: 8px 12px;
  cursor: pointer;
  font-size: 1.2em;
  font-weight: 700;
  white-space: nowrap;

}

/* Footer Styling */

footer {
  border-top: 3px solid var(--white);
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--light-green);
  padding: 15px 20px;
  width: 100%;
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  font-weight: 700;
}

body.dark-mode footer {
  background-color: var(--dark-button-color);
}

/* Copyright Info */
.footer-left {
  font-size: 0.9em;
}

/* Navigation Options */
.footer-center {
  display: flex;
  gap: 15px;
}

.about-btn, .contact-btn {
  color: var(--primary-color);
  background: none;
  font-weight: 900;
  font-size: 1.2em;
  padding: 8px 12px;
  border: none;
  cursor: pointer;
  white-space: nowrap;
  min-width: 120px;
}

/* Homepage styling */

.top-content {
  margin-top: 0;
  padding: 10vh 0;
  background-color: var(--light-green);
}

body.dark-mode .top-content {
  background-color: var(--dark-tertiary-color);
}
body.dark-mode button {
  background-color: var(--dark-button-color);
  color: var(--white);
}
body.dark-mode .search-input {
  background-color: var(--gray);
  color: var(--white);
  border-color: var(--darkest-green);
}

main .intro-text {
  margin-bottom: 5vh;
  font-size: 1.2em;
  font-weight: 700;
}

.search-container {
  display: flex;
  justify-content: center;
  gap: 10px;
  align-items: center;
  padding: 10px;
  
}

.search-input {
  font-size: 1em;
  border: 2px solid var(--button-color);
  background-color: var(--white);
  border-radius: 25px;
  width: 50vw;
  max-width: 800px;
  padding: 10px;
  margin-right: 10px;
}

.search-btn {
  padding: 10px 28px;
  font-size: 1em;
  background-color: var(--primary-color);
  color: var(--white);
  border: none;
  border-radius: 15px;
  cursor: pointer;
}

.search-btn:hover {
  background-color: #4a6f47;
}

.video-section {
  position: relative;
  width: 100%;
  height: 60vh;
  overflow: hidden;
}

.background-video {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 50%;
  height: 50%;
}

/* Darkmode toggle */
.footer-right {
  display: flex;
  align-items: center;
}

.switch {
  position: relative;
  display: inline-block;
  width: 34px;
  height: 20px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--dark-font);
  transition: .4s;
  border-radius: 20px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 14px;
  width: 14px;
  left: 3px;
  bottom: 3px;
  background-color: var(--white);
  transition: .4s;
  border-radius: 50%;
}

input:checked + .slider {
  background-color: var(--gray);
}

input:checked + .slider:before {
  transform: translateX(14px);
}


/* User page Styling */

.generate-btn {
  background-color: var(--primary-color);
  color: var(--white);
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  border: none;
  border-radius: 10px;
  padding: 10px 20px;
  margin-bottom: 2vh;
}

.generate-btn:hover {
  background-color: #4a6e4d;
}

.users-displayed {
  color: var(--primary-color);
}

.users-displayed select {
  margin: 0em .25em;
  appearance: none;
  background-color: var(--white);
  cursor: pointer;
  border: 2px solid var(--primary-color);
  border-radius: 5px;
  color: var(--primary-color);
  text-align: center;
  font-size: 1em;
  font-weight: 700;
  width: 2vw;
  min-width: 25px;
  max-width: 50px;
}

body.dark-mode #random-user-title {
  color: var(--white);
}

body.dark-mode .users-displayed {
  color: var(--white);
}

body.dark-mode .users-displayed select {
  background-color: var(--dark-secondary-color);
  color: var(--white);
  border-color: var(--white);
}

.user-details {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.user-details h3 { /* username */
  margin: 10px 0;
  font-size: 1.2em;
}

.view-btn {
  background-color: var(--primary-color);
  color: var(--white);
  padding: 8px 12px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.view-btn:hover {
  background-color: #4a6f47;
}

/* User Profile Styling */

.container {
  min-height: 100vh;
  height: 100%;
}

.profile-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: .25fr 1fr .75fr;
  gap: 1rem;
  flex-grow: 1;
}

.profile-title {
  grid-column: 1 / 4;
}

.profile-info {
  grid-row-start: 2;
}

.statistic-dropdown {
  grid-column-start: 1;
  grid-row-start: 3;
  margin: 20px;
}

.contribution-container {
  grid-area: 2 / 2 / 4 / 4; /* RS, CS, RE, CE */
  margin-right: 3rem;
}

.back-btn {
  margin-top: 20px;
  padding: 10px 20px;
  background: red;
  color: white;
  border: none;
  cursor: pointer;
  border-radius: 5px;
}

.back-btn:hover {
  background: darkred;
}

.chart-container {
  background-color: #1e1e1e;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
}

.chart-container svg {
  stroke: white !important;
  color: white !important;
}

.chart-container text {
  fill: white !important;
}

.error {
  color: red;
  margin-top: 10px;
}


/* Contact Page Styling */
.contact-page {
  background-color: #dad7cd;
  min-height: 100vh;
}

.contact-container {
  display: flex;
  flex-direction: column;
}

.contact-page main {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
  min-height: 80vh;
  background-color: inherit;
}

#contact-submit-btn {
  width:20%;
  border-radius: 17px;
}

.contact-form input,
.contact-form textarea {
  font-size: 1em;
  border: 2px solid var(--primary-color);
  border-radius: 5px;
  background-color: inherit;
  color: inherit;
}

.thank-you-message {
  text-align: center;
  font-size: 1.2em;
  padding: 40px;
  border-radius: 10px;
}
/* ... */

